# Trevo-whitelabel

./: MANIFEST.in  README.md  pyproject.toml  setup.py
trevo_whitelabel/: branding.py  hooks.py  inject_branding.py
trevo_whitelabel/public/css/: trevo_v1.bundle.scss
trevo_whitelabel/public/css/trevo/: _base.scss  _components.scss  _layout.scss  _login.scss  _overrides.scss  _tokens.scss
trevo_whitelabel/public/js/: trevo_v1.bundle.js
trevo_whitelabel/public/js/components/: TrevoInput.vue
trevo_whitelabel/public/scss/: trevo_v1.bundle.scss
trevo_whitelabel/scripts/: fix_navbar_and_svgs.py  rebrand_to_trevo.py  repaint_svgs.py
trevo_whitelabel/www/: desk.html  desk.py  error.html  login.html  printview.html
