[project]
name = "trevo_whitelabel"
authors = [
    { name = "Ashutosh", email = "contact@dndts.net"}
]
description = "Whitelabel app for Trevo Cloud"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
